--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titan+One&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&family=Workbench&display=swap" rel="stylesheet">
      <!--css-->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Super Hero Browser</title>
 </head>
 <body>
@@ -100,7 +100,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 </html>
