arreglar path img

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container my-0">
            
                 <div class="col-12">
-                    <img id="banner" class="rounded mx-auto d-block img-fluid" src="/assets/imgs/SÚPER HERO (1).png" alt="superhero">
+                    <img id="banner" class="rounded mx-auto d-block img-fluid" src="assets/imgs/SÚPER HERO (1).png" alt="superhero">
                 </div>
         </div>
     </header>
