arreglar etiqueta span

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                               <h4 id="card-title" class="card-title"></h4>
                               <p class="card-title"><span class="negrita">Nombre :</span> <span id="nombre"></span></p>
                               <p class="card-title"><span class="negrita">Conexiones : </span> <span id="conexiones"></span></p>                              
-                              <p class="card-text"><span class="negrita">Publicación : <span id="publicacion"></span></p>
+                              <p class="card-text"><span class="negrita">Publicación : </span> <span id="publicacion"></span></p>
                               <p class="card-text"><span class="negrita">Ocupación :</span> <span id="ocupacion"></span></p>
                               <p class="card-text"><span class="negrita">Altura : </span> <span id="altura"></span></p>
                               <p class="card-text"><span class="negrita">Peso : </span> <span id="peso"></span></p>
